--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <header>
     <h1>Hi, I'm <span>Navyan Mekala</span></h1>
-    <p>.NET Developer | C# | ASP.NET | Angular | SQL | Azure</p>
+    <p>.NET Developer | C# | ASP.NET Core | Angular | SQL | Azure | Core Java | Oops </p>
     <a href="#projects" class="btn">View My Projects</a>
   </header>
 
@@ -25,19 +25,24 @@
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li>C#, .NET Core, ASP.NET</li>
+      <li>C#, .NET Core, ASP.NETCore, ASP.NETCore Mvc, ADO.Net, Entity Frameworks,Core Java, Oops</li>
       <li>SQL Server, MySQL</li>
       <li>Angular, HTML, CSS, JavaScript</li>
-      <li>Git, GitHub, Postman, Azure</li>
+      <li>Git, GitHub, Postman </li>
+      <li>Azure</li>
     </ul>
   </section>
 
   <section id="projects">
     <h2>Projects</h2>
     <div class="project">
-      <h3>Event Ticketing API</h3>
+      <h3>MyCare </h3>
       <p>
-        Built with .NET 8 and MySQL, implementing JWT authentication and CRUD for event management.
+        We developed an internal application for Apex employees. Once they visit our portal, they can view or 
+update personal details. They can view current assigned project details, respective Hr and Manager 
+Details. They can also view and download monthly pay slips. Employees can declare their relatives details 
+working in Apex Company. Employees can update their VISA details and also view and update their Bank 
+details.
       </p>
       <a href="#" class="btn">View on GitHub</a>
     </div>
