Fix formatting of skills list in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <section id="skills">
     <h2>Skills</h2>
     <ul>
-      <li>C#, .NET Core, ASP.NETCore, ASP.NETCore Mvc, ADO.Net, Entity Frameworks,Core Java, Oops</li>
+      <li>C#, .NET Core, ASP.NETCore, ASP.NETCore MVC, ADO.Net, Entity Frameworks, Core Java, Oops</li>
       <li>SQL Server, MySQL</li>
       <li>Angular, HTML, CSS, JavaScript</li>
       <li>Git, GitHub, Postman </li>
