--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ Details. They can also view and download monthly pay slips. Employees can declar
 working in Apex Company. Employees can update their VISA details and also view and update their Bank 
 details.
       </p>
-      <a href="#" class="btn">View on GitHub</a>
+      <a href="https://github.com/navyanmekala" target="_blank" class="btn">View on GitHub</a>
     </div>
   </section>
 
