--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@ details.
     <h2>Contact</h2>
     <p>Email: <a href="mailto:navyanmekala@gmail.com">navyanmekala@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/navyanmekala">linkedin.com/in/navyanmekala</a></p>
+
+    <a href="https://raw.githubusercontent.com/navyanmekala/portfolio-ui/main/Navyan_Resume.pdf" download>
+  <button>Download Resume</button>
+</a>
+
+    
   </section>
 
   <footer>
