--- a/index.html
+++ b/index.html
@@ -53,9 +53,10 @@ details.
     <p>Email: <a href="mailto:navyanmekala@gmail.com">navyanmekala@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/navyanmekala">linkedin.com/in/navyanmekala</a></p>
 
-    <a href="https://raw.githubusercontent.com/navyanmekala/portfolio/main/Navyan_All.pdf" download>
- <p> <button>Download Resume</button></p>
+    <a href="https://raw.githubusercontent.com/navyanmekala/portfolio-ui/main/Navyan_Resume.pdf" target="_blank">
+ <p> <button>View Resume</button> </p>
 </a>
+
 
     
   </section>
