--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@ details.
     <p>Email: <a href="mailto:navyanmekala@gmail.com">navyanmekala@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/navyanmekala">linkedin.com/in/navyanmekala</a></p>
 
-    <a href="https://raw.githubusercontent.com/navyanmekala/portfolio/main/Navyan_All.pdf" target="_blank">
- <p> <button>View Resume</button> </p>
-</a>
+    <iframe src="https://raw.githubusercontent.com/navyanmekala/portfolio/main/Navyan_All.pdf" 
+        width="100%" 
+        height="600px"
+        style="border: none;">
+</iframe>
+
 
 
     
