--- a/index.html
+++ b/index.html
@@ -53,11 +53,10 @@ details.
     <p>Email: <a href="mailto:navyanmekala@gmail.com">navyanmekala@gmail.com</a></p>
     <p>LinkedIn: <a href="https://linkedin.com/in/navyanmekala">linkedin.com/in/navyanmekala</a></p>
 
-    <iframe src="https://raw.githubusercontent.com/navyanmekala/portfolio/main/Navyan_All.pdf" 
-        width="100%" 
-        height="600px"
-        style="border: none;">
-</iframe>
+   <a href="https://raw.githubusercontent.com/navyanmekala/portfolio-ui/main/Navyan_Resume.pdf" target="_blank">
+  <button>View Resume</button>
+</a>
+
 
 
 
